# chip8_cc

./: meson.build
include/: chip8.h
src/: chip8.cpp  main.cpp
tests/: chip8_tests.cpp
